# uca-platform

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  features.md  functionlist.md
.codex/: plan.md
.github/workflows/: ci.yml  docker.yml
deploy/: nginx.conf
docs/: usage.rst
scripts/: generate-keys.sh
uca-platform-server/: Cargo.toml  Dockerfile  config.example.toml
uca-platform-server/docs/: api.md  security.md
uca-platform-server/src/: access.rs  auth.rs  config.rs  db.rs  export_template.rs  labor_hours.rs  lib.rs  mailer.rs  main.rs  policy.rs  state.rs  templates.rs  tls.rs
uca-platform-server/src/entities/: attachments.rs  auth_resets.rs  contest_records.rs  export_templates.rs  form_field_values.rs  form_fields.rs  import_template_fields.rs  mod.rs  (+11 more)
uca-platform-server/tests/: integration.rs
uca-platform-ui/: Dockerfile  eslint.config.ts  index.html  nginx.conf  package.json  pnpm-lock.yaml
uca-platform-ui/src/: App.vue
volunteerhours-server/: Cargo.toml
volunteerhours-server/docs/: api.md
volunteerhours-server/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
volunteerhours-server/src/entities/: competition_library.rs  contest_records.rs  devices.rs  recovery_codes.rs  sessions.rs  students.rs  volunteer_records.rs
volunteerhours-server/src/migration/: mod.rs
volunteerhours-server/src/routes/: admin.rs  attachments.rs  auth.rs  exports.rs  forms.rs  mod.rs  records.rs  students.rs
volunteerhours-server/tests/: integration.rs
volunteerhours-ui/: README.md  package.json
volunteerhours-ui/src/: App.vue  main.ts
(+86 files in other folders)
