[package]
name = "volunteerhours"
version = "0.1.0"
edition = "2024"

[dependencies]
aead = "0.5"
aes-gcm = "0.10"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
calamine = "0.24"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
mime_guess = "2"
printpdf = "0.7"
rand = "0.8"
rcgen = "0.13"
rust_xlsxwriter = "0.65"
sea-orm = { version = "1", features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["serde", "macros"] }
tokio = { version = "1", features = ["full"] }
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.18", features = ["derive"] }
webauthn-rs = "0.5"
